src/objects/Replecement__c.object
<CustomObject>
    <fields>
        <fullName>NewHardwareParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NewHardwareParent</label>
        <referenceTo>Hardware__c</referenceTo>
        <relationshipLabel>Replacements</relationshipLabel>
        <relationshipName>Replacements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NewOwner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Replacements (NewOwner)</relationshipLabel>
        <relationshipName>Replacements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OldHardwareParent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OldHardwareParent</label>
        <referenceTo>Hardware__c</referenceTo>
        <relationshipLabel>Replacements (OldHardwareParent)</relationshipLabel>
        <relationshipName>Replacements2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OldOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OldOwner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Replacements</relationshipLabel>
        <relationshipName>Replacements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OperatedHardware__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OperatedHardware</label>
        <referenceTo>Hardware__c</referenceTo>
        <relationshipLabel>Replacements (OperatedHardware)</relationshipLabel>
        <relationshipName>Replacements1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Replacement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Replecement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Replacements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>